--- a/views/oauth-success.html
+++ b/views/oauth-success.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	</head>
 	<body>
+	<div class="meta-info">
+		<label>Client ID:</label> {{ clientID }}  <label>| Tradeshift Host</label>: {{ tsHost }}
+	</div>
 	<h1>Hello third-party app</h1>
 	<div class="subtitle">
 		This is the demo of using Tradeshift OAuth 2.0 for Web Server Applications
