--- a/views/oauth-success.html
+++ b/views/oauth-success.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<div class="meta-info">
-		<label>Client ID:</label> {{ clientID }}  <label>| Tradeshift Host</label>: {{ tsHost }}
+		<label>OAuth Client ID:</label>{{ clientID }}<label> Tradeshift Host:</label> {{ tsHost }}
 	</div>
 	<h1>Hello third-party app</h1>
 	<div class="subtitle">
