--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,12 +21,16 @@ h2 {
 .meta-info{
 	font-size: .8em;
 	background-color: #353535;
-	color: #ffffff;
-	padding: 5px;
+	color: #d2d2d2;
+	padding: 5px 10px;
 	text-align: right;
+	border-bottom:1px solid #000000;
 }
 .meta-info label{
-	color: #158be7;
+	font-weight: bold;
+	padding: 5px 1em 5px 2em;
+	margin-right: 0 5px;
+	/* border-left: 1px solid #939393; */
 }
 
 .section{
